--- a/styles/scss/modules/pages/kisiler/index.module.css
+++ b/styles/scss/modules/pages/kisiler/index.module.css
@@ -22,3 +22,25 @@
   border: none;
   box-shadow: none;
 }
+
+.off-body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+.off-body .form svg {
+  margin-right: 0.5rem;
+}
+.off-body .delete {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+.off-body .delete button {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 1.25rem;
+}
