--- a/styles/scss/modules/pages/kisiler/index.module.scss
+++ b/styles/scss/modules/pages/kisiler/index.module.scss
@@ -27,3 +27,30 @@
     box-shadow: none;
   }
 }
+
+.off-body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1.5rem;
+
+  .form {
+    svg {
+      margin-right: 0.5rem;
+    }
+  }
+
+  .delete {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+
+    button {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      font-size: 1.25rem;
+    }
+  }
+}
