--- a/styles/scss/modules/kisiler/KisiAvatar.module.css
+++ b/styles/scss/modules/kisiler/KisiAvatar.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   font-size: 1.25rem;
-  width: 10%;
+  width: 40px;
   aspect-ratio: 1/1;
   border-radius: 50%;
   text-align: center;
